2007-09-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_mjpeg:    MPJEG stream handling for the Tcl conference
	
	* tkchat_mms.tcl:  Multimedia stream support with snack.
	* tkchat_nola.tcl: demo plugin (New Orleans clock display)
	* tkchat.tcl:      Extended hooks to be more useful for plugins
	* tkchat_rss.tcl:  Use init hook to initialize.

2007-09-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_rss.tcl:    Fix encoding handling 
	* rssrdr/rssrdr.tcl: handle additiona atom fields.

2007-09-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_whiteboard.tcl:      Support UseTkOnly flag.

	* jabberlib/wrapper.tcl:      Dealt with an evil bug in the tdom/
	* jabberlib/wrapper-tdom.tcl: expat wrapper where one invalid stream
	* tkchat_rss.tcl:             effectively terminated all other streams
	* rssrdr/rssrdr.tcl:          so a bad rss feed killed the jabber
	link. Fixed the wrapper library and provide better reporting in rss.

	* tkchat.tcl: Fixed bug #1796255 - emoticon insertion copied in
	_all_ the emotes. We only need one.
	* tkchat.tcl: Fix openURL on windows when browser is IE and added
	support for Opera.

2007-09-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_rss.tcl: Avoid recreating the rss label if present.

2007-09-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Moved the emoticon init to post login dialog as
	http proxy configuration occurs here.
	Some bug fixes and typos in the new whiteboard code resolved.

2007-09-13  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Moved the emoticons to the web and added code for
	downloading and caching them in .tkchatrc. Downloading new and
	changed emoticons is automatically done at startup and can be
	manually triggered at runtime from the Emoticons menu.

	Use new-tab instead of new-page for sending URLs to the browser,
	as it seems that new-page is undocumented and newer releases of
	Firefox don't accept it anymore.
	