@@ -1,3 +1,8 @@
+2007-09-26  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl:   Implement the login hooks.
+	* tkchat_mjpeg: Add watchdog.
+
 2007-09-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat_mjpeg:    MPJEG stream handling for the Tcl conference
